@@ -20,6 +20,7 @@ import java.io.IOException;
 import java.math.BigDecimal;
 import java.time.OffsetDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
@@ -65,8 +66,9 @@ public class OrderService {
     private OrderDto toOrderDto(Order order) {
         return OrderDto.builder().id(order.getId()).productName(order.getProduct().getName())
                 .orderTime(order.getOrdertime()).status(order.getStatus()).buyerName(order.getBuyer().getUsername())
-                .shipmentReference("Have not provided").buyerAddress(order.getBuyer().getAddress())
-                .buyerEmail(order.getBuyer().getEmail()).build();
+                .shipmentReference(order.getShipmentReference()).buyerAddress(order.getBuyer().getAddress())
+                       .productId(order.getProduct().getId())
+                .lastUpdatedAt(order.getLastUpdatedAt()).buyerEmail(order.getBuyer().getEmail()).build();
     }
 
     public OrderDto getBuyerInfoById(int id) {
@@ -74,28 +76,53 @@ public class OrderService {
         return toOrderDto(order);
     }
 
-    public void updateShipmentReferenceInOrder(int orderId, String shipmentReference) {
-        Order order = orderRepository.findById(orderId).orElseThrow(ResourceNotFoundException::new);
-        order.setShipmentReference(shipmentReference);
-        orderRepository.save(order);
-    }
-
     public Order getOrder(int id) {
+
         return orderRepository.findById(id).orElseThrow(ResourceNotFoundException::new);
     }
 
-    public List<OrderDto> getOrders() {
-
-        return orderRepository.findByBuyerOrderByOrdertimeDesc(currentUserService.getCurrentUser()).stream()
-                .map(this::toOrderDto).toList();
+    public List<OrderDto> getOrders(Integer productId) {
+        List<Order> orders;
+        if (productId != null) {
+            orders = orderRepository.findByProduct_idAndBuyer(productId, currentUserService.getCurrentUser());
+        } else {
+            orders = orderRepository.findByBuyerOrderByOrdertimeDesc(currentUserService.getCurrentUser());
+        }
+        return orders.stream().map(this::toOrderDto).collect(Collectors.toList());
     }
 
     public void updateOrderStatus(int id, OrderStatusUpdateDto dto) {
         Order order = orderRepository.findById(id).orElseThrow(ResourceNotFoundException::new);
         if (dto.getStatus() == OrderStatus.COMPLETED) {
             completeOrder(order);
+        } else if (dto.getStatus() == OrderStatus.SHIPPED) {
+            shipOrder(order, dto.getShipmentReference());
+        } else if (dto.getStatus() == OrderStatus.DELIVERED) {
+            deliverOrder(order, dto.getShipmentReference());
         }
         orderRepository.save(order);
+    }
+
+    private void shipOrder(Order order, String shipmentReference) {
+        // Prevent illegal status advance
+        if (order.getStatus() != OrderStatus.ORDERED) {
+            throw new InvalidStateException();
+        }
+        order.setStatus(OrderStatus.SHIPPED);
+        order.setShipmentReference(shipmentReference);
+        order.getProduct().setStatus(ProductStatus.SHIPPED);
+        order.setLastUpdatedAt(OffsetDateTime.now());
+    }
+
+    private void deliverOrder(Order order, String shipmentReference) {
+        // Prevent illegal status advance
+        if (order.getStatus() != OrderStatus.SHIPPED) {
+            throw new InvalidStateException();
+        }
+        order.setStatus(OrderStatus.DELIVERED);
+        order.setShipmentReference(shipmentReference);
+        order.getProduct().setStatus(ProductStatus.DELIVERED);
+        order.setLastUpdatedAt(OffsetDateTime.now());
     }
 
     private void completeOrder(Order order) {
@@ -106,6 +133,7 @@ public class OrderService {
 
         order.setStatus(OrderStatus.COMPLETED);
         order.getProduct().setStatus(ProductStatus.SOLD);
+        order.setLastUpdatedAt(OffsetDateTime.now());
         // Debit buyer
         journalEntryService.post(order.getBuyer().getBalanceAccount(),
                 BigDecimal.valueOf(order.getProduct().getPrice()), TransactionType.PURCHASE_CREDIT_RELEASE,
